# ReconCam

./: .gitignore  CMakeLists.txt  Gpio.hpp  Identity.cpp  Identity.hpp  Makefile  README.md  System.hpp  alert.php  allMotion.php  clean.sh  color.hpp  detectAllNewMotions.sh  disableMail.php  displayAll.php  displayTimelapsePhotos.php  enableMail.php  function.cpp  function.hpp  index.php  index.php.old  lite.php  main.cpp  motion.php  notif.sh  object_detection_yolo.cpp.txt  remote.sh  script.sh  sendMailAlert.sh  showDay.php  showMonth.php  showYear.php  timelapse.php  utils.hpp  video.webm
LearningUI/: Identity.cpp  Identity.hpp  LearningUI.pro  QFileSystemModelDatum.cpp  QFileSystemModelDatum.h  QListViewKnown.cpp  QListViewKnown.h  QListViewKnownEvent.cpp  QListViewKnownEvent.h  QListViewNewEvent.cpp  QListViewNewEvent.h  QStyledItemDelegateKnown.cpp  QStyledItemDelegateKnown.h  QStyledItemDelegateThumbnail.cpp  QStyledItemDelegateThumbnail.h  QStyledItemDelegateThumbnailDown.cpp  QStyledItemDelegateThumbnailDown.h  QStyleditemDelegateOpengl.cpp  QStyleditemDelegateOpengl.h  QToolTipper.h  QToolTipperKnown.h  QTreeViewOpengl.cpp  QTreeViewOpengl.h  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qfilesystemmodelnewevent.cpp  qfilesystemmodelnewevent.h  qlistviewnewevent.cpp  qlistviewnewevent.h
LearningUI/OpenGL/: GeometryEngine.cpp  GeometryEngine.h  QOpenGLWidgetCluster.cpp  QOpenGLWidgetCluster.h  fshader.glsl  vshader.glsl
css/: style.css
js/: script.js
learning/LearningUI/: Learning.pro
yolo/: getModels.sh
